@@ -78,19 +78,12 @@ public class WeightListView extends BaseListView {
 
     @Override
     public int getSelectedWeightCount () {
-        return getTable ().getSelectedRowCount ();
+        return getSelectedEntryCount();
     }
 
     @Override
     public int[] getSelectedWeightIDs () {
-        int[] selectedRows = getTable ().getSelectedRows ();
-        int[] selectedIDs = new int[selectedRows.length];
-
-        for (int i = 0; i < selectedIDs.length; i++) {
-            int modelRow = getTable ().convertRowIndexToModel (selectedRows[i]);
-            selectedIDs[i] = (Integer) tmWeights.getValueAt (modelRow, HIDDEN_COLUMN_ID);
-        }
-        return selectedIDs;
+        return getSelectedEntryIDs();
     }
     
     @Override
