@@ -26,6 +26,8 @@ v5.4.0:
        (bigger refactoring for automatic view updates after data changes)
   - Use of @Override annotation instead of {@inheritDoc} in all classes, 
     so implementation errors can be detected by the compiler
+  - Refactoring in all Exericse/Notw/WeightListView: move the similar methods
+    to BaseListView base class
    
 v5.3.0:
  ExerciseViewer changes:
